--- a/LæreGreier/LæreGreier/Properties/Resources.resx
+++ b/LæreGreier/LæreGreier/Properties/Resources.resx
@@ -127,4 +127,10 @@
   <data name="okDatBoi" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\okDatBoi.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="HappyPepe" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\HappyPepe.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MadPepe" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MadPepe.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
