--- a/LæreGreier/LæreGreier/Properties/Resources.resx
+++ b/LæreGreier/LæreGreier/Properties/Resources.resx
@@ -118,19 +118,19 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="braDatBoi" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\braDatBoi.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="dårligDatBoi" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\dårligDatBoi.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="okDatBoi" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\okDatBoi.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="MadPepe" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MadPepe.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="HappyPepe" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\HappyPepe.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="MadPepe" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\MadPepe.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="okDatBoi" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\okDatBoi.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="braDatBoi" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\braDatBoi.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dårligDatBoi" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dårligDatBoi.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
